--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/coded5282/REST-Blog/issues"
   },
-  "homepage": "https://github.com/coded5282/REST-Blog#readme"
+  "homepage": "https://github.com/coded5282/REST-Blog#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "ejs": "^2.4.2",
+    "express": "^4.14.0",
+    "express-sanitizer": "^1.0.1",
+    "method-override": "^2.3.6",
+    "mongoose": "^4.5.2"
+  }
 }
